<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_bg"
    android:orientation="vertical">
    <com.example.view.WFYTitle
        style="@style/wfy_title"
        app:centerText="@string/menstruation_analyze"
        app:leftImage="@drawable/back"
        app:leftIsBack="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_arc"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/theme_color"
                android:text="痛经"/>

            <View
                android:layout_width="match_parent"
                android:layout_marginRight="12dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@color/line_color"
                android:layout_height="0.5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray_text"
                    android:text="@string/cycle"/>
                <TextView
                    android:id="@+id/tv_cycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray_text"
                    android:text="30天"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray_text"
                    android:text="@string/sustain"/>

                <TextView
                    android:id="@+id/tv_date_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray_text"
                    android:text="5天"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_analyze"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/analyze"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:background="@drawable/menstruation_left"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/detail"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/menstruation_centre_while"
                android:textColor="@color/theme_color"
                android:textSize="14sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_suggest"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/suggest"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/menstruation_right_while"
                android:textColor="@color/theme_color"
                android:textSize="14sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <com.example.view.NoScrollViewpager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>
